--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,8 @@
 ---
 galaxy_info:
   author: andornaut
-  description: Base packages and configuration
+  description: Base Ubuntu packages and configuration
   license: MIT
-  min_ansible_version: 1.2
+  min_ansible_version: 2.0
   galaxy_tags: []
+
