--- a/tasks/source-code-pro.yml
+++ b/tasks/source-code-pro.yml
@@ -7,8 +7,9 @@
     creates: /tmp/source-code-pro-2.030R-ro-1.050R-it
 
 - name: Copy source-code-pro TTF files
-  copy:
+  synchronize:
     src: /tmp/source-code-pro-2.030R-ro-1.050R-it/TTF/
     dest: /usr/share/fonts/truetype/source-code-pro
-  notify: update font cache
+  delegate_to: "{{ inventory_hostname }}"
+  notify: Update font cache
   become: true
