--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -61,7 +61,7 @@
     - screen
     - smartmontools
     - smbclient
-    - software-center
+    - "{% if ansible_distribution_release == 'xenial' %}software-center{% else %}gnome-software{% endif %}"
     - software-properties-common
     - sox
     - ssh
