--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -88,6 +88,9 @@
     name: "{{ timezone }}"
   become: true
 
+- name: Re-map capslock key to escape key
+  command: localectl set-x11-keymap "" "" "" caps:escape
+
 - name: Install storage-space-alert
   get_url:
     url: https://raw.githubusercontent.com/andornaut/storage-space-alert/master/storage-space-alert
