--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 galaxy_info:
   author: andornaut
-  description: Base Ubuntu packages and configuration
+  description: Base packages and configurations for Ubuntu
   license: MIT
   min_ansible_version: 2.0
   galaxy_tags: []
