Always install the latest vrs of gog

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -101,9 +101,15 @@
     mode: 0755
   become: true
 
+- name: Check for latest gog version
+  uri:
+    url: https://api.github.com/repos/andornaut/gog/releases/latest
+    return_content: "yes"
+  register: gog_version 
+
 - name: Install gog
   get_url:
-    url: https://github.com/andornaut/gog/releases/download/v{{ gog_version }}/gog-linux-amd64
+    url: https://github.com/andornaut/gog/releases/download/{{ gog_version.json.tag_name }}/gog-linux-amd64
     dest: /usr/local/bin/gog
     mode: 0755
   become: true
