--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -103,13 +103,6 @@
     mode: 0755
   become: true
 
-- name: Install storage-space-alert
-  get_url:
-    url: https://raw.githubusercontent.com/andornaut/storage-space-alert/master/storage-space-alert
-    dest: /usr/local/bin/
-    mode: 0755
-  become: true
-
 - name: Check for the latest version of gog
   uri:
     url: https://api.github.com/repos/andornaut/gog/releases/latest
@@ -122,3 +115,5 @@
     dest: /usr/local/bin/
     mode: 0755
   become: true
+
+- import_tasks: storage-space-alert.yml
