Remove ubuntu-restricted-extras for compat with 14.04

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -71,7 +71,7 @@
     - tmux
     - tree
     - ubuntu-drivers-common
-    - ubuntu-restricted-extras
+    #- ubuntu-restricted-extras
     - unzip
     - vim
     - wget
