--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -60,6 +60,7 @@
     - python-software-properties
     - ranger
     - rsync
+    - rxvt-unicode-256color
     - samba
     - screen
     - smartmontools
