--- a/tasks/storage-space-alert.yml
+++ b/tasks/storage-space-alert.yml
@@ -9,7 +9,7 @@
 - name: Periodically run storage-space-alert
   cron:
     name: storage-space-alert
-    cron_file: /etc/crontab
+    cron_file: /etc/cron.d/ansible-role-base
     user: root
     minute: "30"
     job: storage-space-alert
